--- a/five/src/five_assets/src/index.html
+++ b/five/src/five_assets/src/index.html
@@ -16,6 +16,9 @@
       <textarea id="message"></textarea> 
       <button id="post">Post</button>
       <section id="posts"></section>
+      <section id="follow"></section>
+      <section id="timeline"></section>
+      <section id="followed"></section>
     </main>
   </body>
 </html>
